/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-10-21 05:41 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.bc
    ! rddads stuffs was included eventhough HB_DIR_ADS is not defined, fixed.
    ! disable optimization in debug mode

2012-10-21 03:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.bc
    ! typo on disabling dv_memcpy

2012-10-21 02:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.vc
    ! fixed small typo causing DLL not created

  * winmake/makefile.bc
    ! missing dependency of ace32.obj when SET HB_ADS_IMPLIB=0 in creating DLL

2012-10-20 13:40 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbdate.c
    ! hb_dateStrGet() synced with hrb to bring hbtest.exe error down to 38 from 40

2012-10-20 13:12 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/hbtest/hbtest.prg
    ! line #627: __HARBOUR -> __HARBOUR__ (IMO, it was unintentionally altered)
      This correction bring hbtest.exe down to 40 from 47

2012-10-20 08:34 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/hbformat/hbfmtcls.prg
    ! patch by Maurizio via hrb

2012-10-20 07:32 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/fm.c
    ! remove inclusion of intsafe.h as it is now done in hbdefs.h

2012-10-20 06:37 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/hbsetup.h
  * include/hbdefs.h
    ! use native intsafe.h for MSVS older than MSVS 2010 (This pacify many
      warnings on typedefs redefinitions in older MSVS versions)

  * source/rtl/gttone.c
    ! MSVC 71 (Windows DDK) does not have _inp and _outp in LIBC*.LIB, hence
    linking application compiled with -MT flag will fail. xHabour will now use
    the ASM codes for MSVC 71 MT and will only use the proprietary functions